fixed the z-index of project links

--- a/src/components/Works.css
+++ b/src/components/Works.css
@@ -36,7 +36,7 @@
   background-color: #eee;
   border-radius: 50%;
   transition: 0.15s;
-  z-index: 1;
+  z-index: 0.2;
 }
 
 .work-links a:hover {
